k8s_deployment/drift-monitoring-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drift-monitoring-service-service
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
      # no nodePort specified so one will be automatically assigned from the 30000-32000 range
  selector:
    component: drift-monitoring-service
  type: LoadBalancer
status:
  loadBalancer: {}
