k8s_deployment/drift-monitoring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: drift-monitoring-service
  labels:
    app: drift-monitoring-service
spec:
  selector:
    app: drift-monitoring
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
