k8s_deployment/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana-service
spec:
  selector:
    app: grafana
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
