k8s_deployment/model-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: model-api-service
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
      # no nodePort specified so one will be automatically assigned from the 30000-32000 range
  selector:
    component: model_api
  # type: LoadBalancer
status:
  loadBalancer: {}
