k8s_deployment/prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  ports:
    - name: "9090"
      port: 9090
      targetPort: 9090
      # no nodePort specified so one will be automatically assigned from the 30000-32000 range
  selector:
    component: prometheus
  type: LoadBalancer
status:
  loadBalancer: {}
