k8s_deployment/back-tier-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: back-tier
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/back-tier: "true"
  podSelector:
    matchLabels:
      io.kompose.network/back-tier: "true"
